// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Title /> renders a H2 title 1`] = `
<div>
  <div
    class="sc-gEvEer hwJemA"
  >
    <h2
      class="sc-fqkvVR lnmEWQ"
    >
      <span
        class="sc-aXZVg jHdfHu"
      />
      Lorem Ipsum
    </h2>
  </div>
</div>
`;

exports[`<Title /> renders a shifted H2 title (the stripe should be 10rem to the left) 1`] = `
<div>
  <div
    class="sc-gEvEer fkOhBo"
  >
    <h2
      class="sc-fqkvVR AIxqu"
    >
      <span
        class="sc-aXZVg jHdfHu"
      />
      Lorem Ipsum
    </h2>
  </div>
</div>
`;

exports[`<Title /> renders a unstriped H2 title 1`] = `
<div>
  <div
    class="sc-gEvEer hwJemA"
  >
    <h2
      class="sc-fqkvVR jnkCXF"
    >
      Lorem Ipsum
    </h2>
  </div>
</div>
`;
